@@ -23,9 +23,10 @@ override_dh_shlibdeps:
 
 override_dh_install:
 	dh_install
-	# when building for Ubuntu, allow the admin group, on Debian use sudo group
+	# on Debian use sudo group; on Ubuntu, also allow the admin group for
+	# historical reasons
 	if dpkg-vendor --is ubuntu; then \
-	    /bin/echo -e "[Configuration]\nAdminIdentities=unix-group:admin" > debian/policykit-1/etc/polkit-1/localauthority.conf.d/51-ubuntu-admin.conf; \
+	    /bin/echo -e "[Configuration]\nAdminIdentities=unix-group:sudo;unix-group:admin" > debian/policykit-1/etc/polkit-1/localauthority.conf.d/51-ubuntu-admin.conf; \
 	elif dpkg-vendor --is debian; then \
 	    /bin/echo -e "[Configuration]\nAdminIdentities=unix-group:sudo" > debian/policykit-1/etc/polkit-1/localauthority.conf.d/51-debian-sudo.conf; \
 	fi
